# COMAF

./: .gitignore  CHANGELOG.md  README.md  TRACEABILITY.md  pyproject.toml
.github/workflows/: ci.yml
comaf/: __init__.py  ast.py  cli.py  deserializer.py  lexer.py  parser.py  pnms.py  runner.py  serializer.py  validator.py
comaf/transpilers/: __init__.py  mathematica.py  python.py
docs/: comaf_lite.ebnf  comaf_lite_schema.json  tutorial.md
stdlib/: addendum_units_demo.comaf  bh_entropy_physical.comaf  black_hole_formation.comaf  bounce_cosmology.comaf  cmb_freezeout.comaf  decoherence_anisotropy.comaf  dho_model_a_entropy_damping.comaf  dho_model_b_rendering_damping.comaf  early_universe_inflation.comaf  hawking_radiation.comaf  heat_death_reboot.comaf  neutron_star_curvature.comaf  photon_emission.comaf  qultc_hamiltonian.comaf
tests/: test_addendum_keywords.py  test_cli.py  test_end_to_end.py  test_lexer.py  test_numerical_calibration.py  test_parser.py  test_parser_regression.py  test_persona_checks.py  test_physics_anisotropy.py  test_physics_fcollapse.py  test_pnms.py  test_roundtrip.py  test_simulate.py  test_stdlib_addendum.py  test_strict_mode.py  test_transpiler_calibration.py  test_validator.py  test_validator_levels.py
tests/fixtures/: black_hole_formation.json  bounce_cosmology.json  cmb_freezeout.json  dho_model_a_entropy_damping.json  dho_model_b_rendering_damping.json  early_universe_inflation.json  hawking_radiation.json  heat_death_reboot.json
tests/wolfram/: tc1_bounce_cosmology.wl  tc2_decoherence_expansion.wl  tc4_black_hole_collapse.wl  (+3 more)
