[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comaf-lite"
version = "1.337.0"
description = "COMAF-Lite DSL interpreter for QULT-C physics modeling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.scripts]
comaf = "comaf.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "jsonschema>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["comaf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
